--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 NODE_ENV="development"
 
+#CORS
+FRONT_URL="http://localhost:5000"
+
 # JWT
 JWT_SECRET_KEY = "very-long-secret-key"
 JWT_EXPIRES_IN = "90d"
