--- a/.env
+++ b/.env
@@ -20,3 +20,7 @@ NODE_LOCAL_PORT=3000
 NODE_DOCKER_PORT=3000
 API_URI = "/api/"
 API_VERSION = "v1"
+
+#CRON
+TASK_CURRENCY_UPDATE_FREQ = "*/10 * * * * *" # 10 secs
+CURRENCY_UPDATE_DELAY_HOURS = 12
