--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "MadAsket",
   "license": "ISC",
   "dependencies": {
+    "@coingate/coingate-sdk": "^1.1.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "easy-currencies": "^1.8.1",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5"
