--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "easy-currencies": "^1.8.1",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
