--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "sequelize-erd": "^1.3.1"
   }
 }
