docker configuration;bugfixes;

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-NODE_ENV="development"
+NODE_ENV="production"
 
 #CORS
 FRONT_URL="http://localhost:5173"
@@ -14,10 +14,11 @@ POSTGRESDB_DATABASE=finka_db
 POSTGRESDB_HOST="127.0.0.1"
 POSTGRESDB_LOCAL_PORT=5433
 POSTGRESDB_DOCKER_PORT=5432
-POSTGRESDB_PORT=5433
+POSTGRESDB_PORT=5432
 
 # REST
 NODE_LOCAL_PORT=3000
+NODE_DOCKER_PORT=3000
 API_URI = "/api/"
 API_VERSION = "v1"
 
