--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.6.2",
-    "sequelize-erd": "^1.3.1"
+    "sequelize-cli": "^6.6.2"
   }
 }
