--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 NODE_ENV="production"
 
 #CORS
-FRONT_URL="http://localhost:5173"
+FRONT_URL="http://localhost"
 
 # JWT
 JWT_SECRET_KEY = "very-long-secret-key"
@@ -11,14 +11,13 @@ JWT_EXPIRES_IN = "90d"
 POSTGRESDB_USER=postgres
 POSTGRESDB_ROOT_PASSWORD=123456
 POSTGRESDB_DATABASE=finka_db
-POSTGRESDB_HOST="127.0.0.1"
+POSTGRESDB_HOST=database
 POSTGRESDB_LOCAL_PORT=5433
 POSTGRESDB_DOCKER_PORT=5432
 POSTGRESDB_PORT=5432
 
 # REST
 NODE_LOCAL_PORT=3000
-NODE_DOCKER_PORT=3000
 API_URI = "/api/"
 API_VERSION = "v1"
 
