--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,6 +1,12 @@
 services:
-  postgresdb:
+  front-builder:
+    build:
+      context: .
+      dockerfile: ./front-builder/Dockerfile
+    image: front-builder:latest
+  database:
     image: postgres
+    container_name: finka-db
     restart: unless-stopped
     env_file: ./.env.production
     environment:
@@ -11,14 +17,28 @@ services:
       - $POSTGRESDB_LOCAL_PORT:$POSTGRESDB_DOCKER_PORT
     volumes:
       - db:/var/lib/postgres
-  finka-rest:
-    container_name: finka-rest
+  backend:
+    build:
+      context: .
+      dockerfile: ./Dockerfile.prod
+    container_name: finka-backend
+    env_file: ./.env.production
     ports:
       - "3000:3000"
-    build: .
     command: sh -c "npx sequelize-cli db:migrate && npm start"
     depends_on:
-      - postgresdb
+      - database
+  nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    container_name: finka-nginx
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+      - front-builder
 
-volumes: 
+volumes:
   db:
+
