--- a/.env.production
+++ b/.env.production
@@ -4,16 +4,14 @@ NODE_ENV="production"
 FRONT_URL="http://localhost"
 
 # JWT
-JWT_SECRET_KEY = "very-long-secret-key"
+JWT_SECRET_KEY = "67583856-8a0c-8005-ada5-7f297b641412"
 JWT_EXPIRES_IN = "90d"
 
 # Database
-POSTGRESDB_USER=postgres
-POSTGRESDB_ROOT_PASSWORD=123456
-POSTGRESDB_DATABASE=finka_db
+POSTGRESDB_USER=pguser
+POSTGRESDB_ROOT_PASSWORD=675838568a0c8005ada57f297b641412
+POSTGRESDB_DATABASE=finka_database
 POSTGRESDB_HOST=database
-POSTGRESDB_LOCAL_PORT=5433
-POSTGRESDB_DOCKER_PORT=5432
 POSTGRESDB_PORT=5432
 
 # REST
