github action setup

--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 NODE_ENV="production"
 
 #CORS
-FRONT_URL="http://localhost"
+FRONT_URL="http://134.122.52.63"
 
 # JWT
 JWT_SECRET_KEY = "67583856-8a0c-8005-ada5-7f297b641412"
