--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,15 +21,14 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup SSH
-      uses: webfactory/ssh-agent@v0.5.4
+      uses: webfactory/ssh-agent@v0.9.0
       with:
         ssh-private-key: ${{ secrets.DO_SSH_KEY }}
 
     - name: Build and Deploy the Docker image
       run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.DO_USER }}@${{ secrets.DO_HOST }} "
-            cd finka-rest/ &&
+          ssh -o StrictHostKeyChecking=no ${{ secrets.DO_USER }}@${{ secrets.DO_HOST }} 
+          "cd finka-rest/ &&
             git pull origin main &&
             docker-compose -f docker-compose.prod.yaml build --no-cache &&
-            docker-compose -f docker-compose.prod.yaml up -d
-          "
+            docker-compose -f docker-compose.prod.yaml up -d"
