github action setup

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,4 @@ jobs:
     - name: Build and Deploy the Docker image
       run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.DO_USER }}@${{ secrets.DO_HOST }} 
-          "cd finka-rest/ &&
-            git pull origin main &&
-            docker-compose -f docker-compose.prod.yaml build --no-cache &&
-            docker-compose -f docker-compose.prod.yaml up -d"
+          "/root/finka-rest/deploy/deploy.sh"
