analytics, improvements, https ready

--- a/.env
+++ b/.env
@@ -1,11 +1,16 @@
 NODE_ENV="development"
 
 #CORS
-FRONT_URL="http://localhost:5173"
+ALLOWED_ORIGINS="http://dev.finka.io:5173,http://localhost:5173"
+
 
 # JWT
 JWT_SECRET_KEY = "very-long-secret-key"
 JWT_EXPIRES_IN = "90d"
+
+# GOOGLE AUTH
+GOOGLE_CLIEND_ID = "270267387603-96qe4878ikio0mvih26ikl8sbl1v1svf.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
 
 # Database
 POSTGRESDB_USER=postgres
