--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,15 @@
 NODE_ENV="production"
 
 #CORS
-FRONT_URL="http://134.122.52.63"
+ALLOWED_ORIGINS="http://134.122.52.63,http://app.finka.cloud,http://finka.cloud,https://finka.cloud,https://app.finka.cloud"
 
 # JWT
 JWT_SECRET_KEY = "67583856-8a0c-8005-ada5-7f297b641412"
 JWT_EXPIRES_IN = "90d"
+
+# GOOGLE AUTH
+GOOGLE_CLIEND_ID = "270267387603-96qe4878ikio0mvih26ikl8sbl1v1svf.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
 
 # Database
 POSTGRESDB_USER=pguser
