--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,42 @@
 server {
     listen 80;
     server_name _; # Или ваш домен
+    return 301 https://$host$request_uri;
 
-    root /usr/share/nginx/html; # Папка со статикой
+    # root /usr/share/nginx/html; # Папка со статикой
+    # index index.html index.htm;
+
+    # # Маршрутизация для Vue (history mode)
+    # location / {
+    #     try_files $uri $uri/ /index.html;
+    # }
+
+    # # Проксируем API-запросы на бэкенд
+    # location /api/ {
+    #     proxy_pass http://backend:3000; # имя сервиса и порт бэкенда в docker-compose
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # }
+}
+
+server{
+
+server {
+    listen 443 ssl;
+    server_name _; # Или ваш домен
+
+    root /usr/share/nginx/html;
     index index.html index.htm;
+
+    # Сертификаты Cloudflare
+    ssl_certificate /etc/nginx/ssl/cloudflare.crt;
+    ssl_certificate_key /etc/nginx/ssl/cloudflare.key;
+
+    # Оптимизация SSL
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
 
     # Маршрутизация для Vue (history mode)
     location / {
@@ -12,9 +45,10 @@ server {
 
     # Проксируем API-запросы на бэкенд
     location /api/ {
-        proxy_pass http://backend:3000; # имя сервиса и порт бэкенда в docker-compose
+        proxy_pass http://backend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+}
 }
