--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -5,7 +5,7 @@ services:
       dockerfile: ./front-builder/Dockerfile
     image: front-builder:latest
     volumes:
-      - ~/.ssh:/root/.ssh:ro 
+      - /root/.ssh:/root/.ssh:ro 
   database:
     image: postgres
     container_name: finka-database
