--- a/front-builder/Dockerfile
+++ b/front-builder/Dockerfile
@@ -6,6 +6,7 @@ COPY front-builder/ssh/config /root/.ssh/config
 COPY front-builder/ssh/id_rsa /root/.ssh/id_rsa
 RUN chmod 600 /root/.ssh/id_rsa /root/.ssh/config
 RUN ssh-keyscan github.com >> /root/.ssh/known_hosts
+RUN ssh -T git@github.com || true
 RUN git clone git@github.com:madAsket/finka-front.git .
 RUN npm install
 RUN npm run build
