--- a/front-builder/Dockerfile
+++ b/front-builder/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:20.12.1 as front-builder
 WORKDIR /app
-COPY /app/front-source /app/front-dist
+RUN echo $(ls -1)
+COPY front-source /app/front-dist
 WORKDIR /app/front-dist
 RUN npm install
 RUN npm run build
