--- a/front-builder/Dockerfile
+++ b/front-builder/Dockerfile
@@ -1,8 +1,7 @@
 FROM node:20.12.1 as front-builder
-RUN echo $(ls -1)
+RUN echo $(ls -1 /home)
 WORKDIR /app
-RUN echo $(ls -1)
-COPY front-source /app/front-dist
+COPY /home/front-source /app/front-dist
 WORKDIR /app/front-dist
 RUN npm install
 RUN npm run build
