--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,11 +1,22 @@
 services:
+  # front-builder:
+  #   build:
+  #     context: .
+  #     dockerfile: ./front-builder/Dockerfile
+  #   image: front-builder:latest
+  #   volumes:
+  #     - /home/finka-front:/home/front-source
   front-builder:
-    build:
-      context: .
-      dockerfile: ./front-builder/Dockerfile
-    image: front-builder:latest
+    image: node:20.12.1
+    container_name: finka-front-builder
+    working_dir: /app
     volumes:
-      - /home/finka-front:/home/front-source
+      - /home/finka-front:/app 
+    command: >
+      bash -c "
+        npm install &&
+        npm run build
+      "
   database:
     image: postgres
     container_name: finka-database
@@ -41,10 +52,11 @@ services:
       - "443:443"
     depends_on:
       - backend
-      - front-builder
+      # - front-builder
     volumes:
       - ./nginx/certs:/etc/nginx/ssl # Монтируем сертификаты
       - ./nginx/conf.d:/etc/nginx/conf.d # Убедитесь, что конфигурация nginx подгружается
+      - /home/finka-front/dist:/usr/share/nginx/html:ro
 
 volumes:
   db:
