--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -55,6 +55,7 @@ services:
       - front-builder
     volumes:
       - ./nginx/certs:/etc/nginx/ssl # Монтируем сертификаты
+      - /home/finka-front/dist:/usr/share/nginx/html:ro
 
 volumes:
   db:
