--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,7 @@
-FROM front-builder:latest as builder
+FROM node:20.12.1 as builder
+WORKDIR /build
+RUN npm install
+RUN npm run build
 
 FROM nginx:stable-alpine
 COPY nginx.conf /etc/nginx/conf.d/finka.conf
