--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,9 +1,8 @@
 FROM node:20.12.1 as builder
 WORKDIR /app
-COPY /build .
 RUN npm install
 RUN npm run build
 
 FROM nginx:stable-alpine
 COPY nginx.conf /etc/nginx/conf.d/finka.conf
-COPY --from=builder /build/dist /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
