--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -53,7 +53,7 @@ services:
       - backend
     volumes:
       - ./nginx/certs:/etc/nginx/ssl # Монтируем сертификаты
-      - /home/finka-front:/build
+      - /home/finka-front:/app
 volumes:
   db:
 
