--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,21 +1,14 @@
 services:
-  # front-builder:
-  #   build:
-  #     context: .
-  #     dockerfile: ./front-builder/Dockerfile
-  #   image: front-builder:latest
-  #   volumes:
-  #     - /home/finka-front:/home/front-source
-  # front-builder:
-  #   container_name: finka-front-builder
-  #   # working_dir: /build
-  #   volumes:
-  #     - /home/finka-front:/build
-  #   # command: >
-  #   #   bash -c "
-  #   #     npm install &&
-  #   #     npm run build
-  #   #   "
+  front-builder:
+    container_name: finka-front-builder
+    working_dir: /build
+    volumes:
+      - /home/finka-front:/build
+    command: >
+      bash -c "
+        npm install &&
+        npm run build
+      "
   database:
     image: postgres
     container_name: finka-database
@@ -51,9 +44,9 @@ services:
       - "443:443"
     depends_on:
       - backend
+      - front-builder
     volumes:
       - ./nginx/certs:/etc/nginx/ssl # Монтируем сертификаты
-      - /home/finka-front:/app
 volumes:
   db:
 
