--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,5 +1,6 @@
 services:
   front:
+    image: node:20.12.1
     container_name: finka-front-builder
     working_dir: /build
     volumes:
@@ -44,7 +45,7 @@ services:
       - "443:443"
     depends_on:
       - backend
-      # - front
+      - front
     volumes:
       - ./nginx/certs:/etc/nginx/ssl # Монтируем сертификаты
 volumes:
