--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,15 +1,15 @@
 services:
-  front:
-    image: node:20.12.1
-    container_name: finka-front-builder
-    working_dir: /build
-    volumes:
-      - /home/finka-front:/build
-    command: >
-      bash -c "
-        npm install &&
-        npm run build
-      "
+  # front:
+  #   image: node:20.12.1
+  #   container_name: finka-front-builder
+  #   working_dir: /build
+  #   volumes:
+  #     - /home/finka-front:/build
+  #   command: >
+  #     bash -c "
+  #       npm install &&
+  #       npm run build
+  #     "
   database:
     image: postgres
     container_name: finka-database
@@ -45,7 +45,6 @@ services:
       - "443:443"
     depends_on:
       - backend
-      - front
     volumes:
       - ./nginx/certs:/etc/nginx/ssl # Монтируем сертификаты
 volumes:
