--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -37,8 +37,8 @@ services:
       - database
   nginx:
     build:
-      context: ./nginx
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: ./nginx/Dockerfile
     container_name: finka-nginx
     ports:
       - "80:80"
