--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -47,6 +47,7 @@ services:
       - backend
     volumes:
       - ./nginx/certs:/etc/nginx/ssl # Монтируем сертификаты
+      - /root/finka-front:./finka-front # Монтируем сертификаты
 volumes:
   db:
 
