--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,8 +1,7 @@
 FROM node:20.12.1 as builder
 WORKDIR /app
-RUN echo $(ls -1 ./)
-RUN echo $(ls -1 ./..)
-COPY ./finka-front .
+RUN echo $(ls -1 /home)
+COPY /home/finka-front .
 WORKDIR /app/finka-front
 RUN npm install
 RUN npm run build
