--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -47,7 +47,7 @@ services:
       - backend
     volumes:
       - ./nginx/certs:/etc/nginx/ssl # Монтируем сертификаты
-      - /root/finka-front:/home/finka-front # Монтируем сертификаты
+      - /root/finka-front:/home/finka-front:ro # Монтируем сертификаты
 volumes:
   db:
 
