--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no ${{ secrets.DO_USER }}@${{ secrets.DO_HOST }} "
             cd /root/finka-front &&
             git pull origin main &&
+            docker compose -f docker-compose.prod.yaml build --no-cache &&
             cd /root/finka-rest &&
             git pull origin main &&
             docker compose -f docker-compose.prod.yaml build --no-cache &&
