landing and subdomain routing, static router

--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,28 +1,12 @@
 server {
     listen 80;
-    server_name _; # Или ваш домен
-    return 301 https://$host$request_uri;
-
-    # root /usr/share/nginx/html; # Папка со статикой
-    # index index.html index.htm;
-
-    # # Маршрутизация для Vue (history mode)
-    # location / {
-    #     try_files $uri $uri/ /index.html;
-    # }
-
-    # # Проксируем API-запросы на бэкенд
-    # location /api/ {
-    #     proxy_pass http://backend:3000; # имя сервиса и порт бэкенда в docker-compose
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    # }
+    server_name app.finka.cloud;
+    return 301 https://app.finka.cloud$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name _; # Или ваш домен
+    server_name app.finka.cloud;
 
     root /usr/share/nginx/html;
     index index.html index.htm;
@@ -30,6 +14,20 @@ server {
     # Сертификаты Cloudflare
     ssl_certificate /etc/nginx/ssl/cloudflare.crt;
     ssl_certificate_key /etc/nginx/ssl/cloudflare.key;
+
+        # Включаем gzip
+    gzip on;
+    # Какие типы файлов сжимать:
+    gzip_types 
+        text/plain 
+        text/css 
+        application/json 
+        application/javascript
+        image/svg+xml;
+    # Минимальный размер файла для сжатия (в байтах):
+    gzip_min_length 256;
+    # Добавлять ли заголовок Vary: Accept-Encoding
+    gzip_vary on;
 
     # Оптимизация SSL
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -47,5 +45,9 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /images/ {
+        proxy_pass http://backend:3000/images/;
     }
 }
