--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,6 @@
 FROM nginx:stable-alpine
-COPY ./nginx/nginx.conf /etc/nginx/conf.d/finka.conf
+COPY ./nginx/app.conf /etc/nginx/conf.d/app.conf
+COPY ./nginx/landing.conf /etc/nginx/conf.d/landing.conf
 COPY  ./front-builder/dist /usr/share/nginx/html
+#temporary landing
+COPY  ./nginx/landing.html /usr/share/nginx/landing/index.html 
