--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,8 @@ jobs:
           ssh -o StrictHostKeyChecking=no ${{ secrets.DO_USER }}@${{ secrets.DO_HOST }} "
             cd /root/finka-front &&
             git pull origin main &&
-            cp -r /root/finka-front/dist /root/finka-rest/front-builder/dist &&
+            rm -rf /root/finka-rest/front-builder/dist && 
+            cp -r /root/finka-front/dist /root/finka-rest/front-builder &&
             cd /root/finka-rest &&
             git pull origin main &&
             docker compose -f docker-compose.prod.yaml build --no-cache &&
