--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@coingate/coingate-sdk": "^1.1.2",
+    "@getbrevo/brevo": "^2.2.0",
     "@sentry/node": "^8.47.0",
     "@sentry/profiling-node": "^8.47.0",
     "axios": "^1.7.9",
@@ -25,7 +26,9 @@
     "node-cron": "^3.0.3",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "sib-api-v3-sdk": "^8.5.0",
+    "stripe": "^17.5.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
